test with REALIGN_LINE_NUMBERS "true"